--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <a href="australia.html" target="_blank"></a>
+                    <a href="australia.html" target="_blank">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCdsthfrjY3YzxNRJY0ckaItCM6mt2L0bTDA&s" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">AUSTRALIA</h5>
@@ -42,7 +42,8 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="england.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">ENGLAND</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -51,7 +52,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="sa.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">SOUTH AFRICA</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -60,7 +62,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="ban.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">BANGLADESH</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -69,7 +72,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="afg.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">AFGANISTAN</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -78,7 +82,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="usa.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">USA</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -87,7 +92,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <a href="wi.html" target="_blank">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">WEST INDIES</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
