--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Bootstrap Example</title>
+  <title>ICC T20 World Cup</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
           <a class="nav-link active" aria-current="page" href="">Tickets</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Marchandise</a>
+          <a class="nav-link active" aria-current="page" href="">Merchandise</a>
         </li>
 
 
