--- a/india.html
+++ b/india.html
@@ -3,15 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redmi Smartphone Gallery</title>
+    <title>Team India</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Stats</a>
+        </li>
+	<li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Past Winners</a>
+        </li>
+	 <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Tickets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Merchandise</a>
+        </li>
+
+
+
+
+        
+    </div>
+  </div>
+</nav>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">QUALIFIED TEAMS FOR TOP 8</h1>
-        <p class="lead">Explore the latest Redmi smartphone models with high-quality images.</p>
+        <p class="lead">..........</p>
     </div>
 
     <!-- Photo Gallery -->
@@ -20,7 +54,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/bcci-1641601185-1641601185.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="https://i.pinimg.com/474x/0f/4e/f6/0f4ef6c3cf55f35e789c1e45aa6238f5.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">ROHIT SHARMA</h5>
                         <p class="card-text">Capture every detail with precision and style.</p>
@@ -30,7 +64,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="https://i.pinimg.com/474x/8d/42/66/8d426637af37bef8b4ed979d01b0f705.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">YASHASVI JAISWAL</h5>
                         <p class="card-text">Experience blazing-fast speed with 5G connectivity.</p>
@@ -40,7 +74,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="https://i.pinimg.com/474x/77/7f/11/777f11576809f257c61365f0c575ed23.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">VIRAT KOHLI</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -49,7 +83,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="https://imgs.search.brave.com/YGTNmRdutKaviAd_MRbTEBhH-h4xaqdOjuo8h_8ExQw/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy82/LzYzL1NoaXZhbV9E/dWJlX2luX1BNT19O/ZXdfRGVsaGkuanBn" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">SHIVAM DUBEY</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -58,7 +92,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="https://i.pinimg.com/474x/79/f0/ba/79f0bad9299b91b3f167368727113112.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">RAVINDRA JADEJA</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
@@ -67,9 +101,18 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="https://imgs.search.brave.com/FvH5wA2wsEfhTVpeE0gtD2rjpTxfop1FNUU731IDzT0/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNjLWNyaWNr/ZXQuY29tL2ltYWdl/L3VwbG9hZC90X3Jh/dGlvM180LXNpemU0/MC9wcmQvaWx2YmRt/dm5meWlwYjJqZTd4/dWE.jpeg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
-                        <h5 class="card-title">AFGANISTAN</h5>
+                        <h5 class="card-title">Suryakumar Yadav</h5>
+                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://imgs.search.brave.com/h6FG1L2mKLSxtKNuKMuDpo0CzUA9nzwfNMn3CBcYM34/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi82LzY3L1Jp/c2hhYmhfUGFudF9p/bl9QTU9fTmV3X0Rl/bGhpLmpwZy81MTJw/eC1SaXNoYWJoX1Bh/bnRfaW5fUE1PX05l/d19EZWxoaS5qcGc" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Rishabh Pant</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
                     </div>
                 </div>
@@ -78,7 +121,36 @@
                 <div class="card">
                     <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
-                        <h5 class="card-title">USA</h5>
+                        <h5 class="card-title">Sanju Samson</h5>
+                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/bcci-1641601185-1641601185.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Axar Patel</h5>
+                        <p class="card-text">Capture every detail with precision and style.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Image 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Kuldeep Yadav</h5>
+                        <p class="card-text">Experience blazing-fast speed with 5G connectivity.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Image 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Yuzvendra Chahal</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
                     </div>
                 </div>
@@ -87,12 +159,39 @@
                 <div class="card">
                     <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
-                        <h5 class="card-title">WEST INDIES</h5>
+                        <h5 class="card-title">Arshdeep Singh</h5>
                         <p class="card-text">Redefine power and elegance with flagship features.</p>
                     </div>
                 </div>
             </div>
-
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Jasprit Bumrah</h5>
+                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Mohammed Siraj</h5>
+                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Hardik Pandya</h5>
+                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                    </div>
+                </div>
+            </div>
+            
 
 
         </div>
