--- a/team.html
+++ b/team.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redmi Smartphone Gallery</title>
+    <title>Teams</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="">Stats</a>
+              </li>
+          <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
+              </li>
+           <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="">Tickets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
+              </li>
+          </div>
+        </div>
+      </nav>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">QUALIFIED TEAMS FOR TOP 8</h1>
