--- a/sa.html
+++ b/sa.html
@@ -39,8 +39,8 @@
       </nav>
     <!-- Header -->
     <div class="container text-center my-5">
-        <h1 class="display-5">QUALIFIED TEAMS FOR TOP 8</h1>
-        <p class="lead">Explore the latest Redmi smartphone models with high-quality images.</p>
+        <h1 class="display-5">SOUTH AFRICA</h1>
+        <p class="lead">____________________________________</p>
     </div>
 
     <!-- Photo Gallery -->
@@ -49,140 +49,140 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://i.pinimg.com/474x/0f/4e/f6/0f4ef6c3cf55f35e789c1e45aa6238f5.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ad.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Aiden Markram</h5>
-                        <p class="card-text">Capture every detail with precision and style.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://i.pinimg.com/474x/8d/42/66/8d426637af37bef8b4ed979d01b0f705.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\qdk2.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Quinton de Kock</h5>
-                        <p class="card-text">Experience blazing-fast speed with 5G connectivity.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://i.pinimg.com/474x/77/7f/11/777f11576809f257c61365f0c575ed23.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\an.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Anrich Nortje</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://imgs.search.brave.com/YGTNmRdutKaviAd_MRbTEBhH-h4xaqdOjuo8h_8ExQw/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy82/LzYzL1NoaXZhbV9E/dWJlX2luX1BNT19O/ZXdfRGVsaGkuanBn" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rr.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ryan Rickelton</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://i.pinimg.com/474x/79/f0/ba/79f0bad9299b91b3f167368727113112.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ob.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ottniel Baartman</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://imgs.search.brave.com/FvH5wA2wsEfhTVpeE0gtD2rjpTxfop1FNUU731IDzT0/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuaWNjLWNyaWNr/ZXQuY29tL2ltYWdl/L3VwbG9hZC90X3Jh/dGlvM180LXNpemU0/MC9wcmQvaWx2YmRt/dm5meWlwYjJqZTd4/dWE.jpeg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\hk.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Heinrich Klaasen</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://imgs.search.brave.com/h6FG1L2mKLSxtKNuKMuDpo0CzUA9nzwfNMn3CBcYM34/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi82LzY3L1Jp/c2hhYmhfUGFudF9p/bl9QTU9fTmV3X0Rl/bGhpLmpwZy81MTJw/eC1SaXNoYWJoX1Bh/bnRfaW5fUE1PX05l/d19EZWxoaS5qcGc" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ts.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tristan Stubbs</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rh.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Reeza Hendricks</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/bcci-1641601185-1641601185.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\mj.jpg"class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Marco Jansen</h5>
-                        <p class="card-text">Capture every detail with precision and style.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\km.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Keshav Maharaj</h5>
-                        <p class="card-text">Experience blazing-fast speed with 5G connectivity.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\dm.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">David Miller</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\kr.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Kagiso Rabada</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\gc.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Gerald Coetzee</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\bf.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Bjorn Fortuin</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\tsh.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tabraiz Shamsi</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal2Label">Redmi Note 12 5G</h5>
+                    <h5 class="modal-title" id="modal2Label"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -212,7 +212,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modal3Label">Redmi K60 Ultra</h5>
+                    <h5 class="modal-title" id="modal3Label"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
