--- a/team.html
+++ b/team.html
@@ -50,10 +50,10 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="india.html" target="_blank">
-                    <img src="https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/bcci-1641601185-1641601185.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\logo.png" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">INDIA</h5>
-                        <p class="card-text">Capture every detail with precision and style.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
@@ -61,10 +61,10 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="australia.html" target="_blank">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCdsthfrjY3YzxNRJY0ckaItCM6mt2L0bTDA&s" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ausl.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">AUSTRALIA</h5>
-                        <p class="card-text">Experience blazing-fast speed with 5G connectivity.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
@@ -72,60 +72,60 @@
             <div class="col-md-4">
                 <div class="card">
                     <a href="england.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\endl.png" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">ENGLAND</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <a href="sa.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sal.webp" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">SOUTH AFRICA</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <a href="ban.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\banl.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">BANGLADESH</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <a href="afg.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\afgl.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">AFGANISTAN</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <a href="usa.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\usal.png" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">USA</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <a href="wi.html" target="_blank">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\wil.png"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
                     <div class="card-body text-center">
                         <h5 class="card-title">WEST INDIES</h5>
-                        <p class="card-text">Redefine power and elegance with flagship features.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
